-
Bug
-
Resolution: Done
-
P4: Low
-
Qt Creator 4.5.1
-
d57e052768929c50506f250441e89bddafb5d452
Current feature to deploy Qt libraries for QNX device does copy everything under Qt5 lib directory. Including files that are not needed on the target device e.g:
*.cmake
*.la, *.prl, *.a
*.pc
None of the files with above are not needed at target device.
For Gerrit Dashboard: QTCREATORBUG-20000 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
265907,4 | Qnx: Do not deploy files that are not needed | 4.10 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |