Qnx: Do not deploy files that are not needed

Task-number: QTCREATORBUG-20000
Change-Id: Ie9a2341a3bcd1531bc83b54bf43466df1347627c
Reviewed-by: Cristian Adam <cristian.adam@qt.io>
Reviewed-by: David Schulz <david.schulz@qt.io>